remove duplicated title

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="hero-content">
                 <img src="avatar.svg" alt="Marko Prelevikj" class="hero-avatar" id="heroAvatar">
                 <h1 class="hero-title">Marko Prelevikj</h1>
-                <p class="hero-subtitle">Data Scientist & Analytics Expert</p>
+                <p class="hero-subtitle"></p>
                 <p class="hero-description">
                     Data Scientist with over 5 years of experience in machine learning, A/B testing, and product
                     analytics.
